crmeb_java/crmeb/deploy/k8s/overlays/dev/patch-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crmeb-admin
  namespace: crmeb
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: admin
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 800m
              memory: 768Mi
