crmeb_java/crmeb/deploy/k8s/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crmeb-ingress
  namespace: crmeb
spec:
  rules:
    - host: admin.dev.crmeb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crmeb-admin
                port:
                  number: 80
    - host: front.dev.crmeb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crmeb-front
                port:
                  number: 80
